--- a/RECEITASCAROL.html
+++ b/RECEITASCAROL.html
@@ -16,9 +16,9 @@
 
         <img middle src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRY4P156wkgjXclS0kSmOy8yrjg2CPY-sZYsbWLnXBbg&s"</img> 
         
-        <h3>O preparo deste sorvete é extremamente fácil, além de ser natural,</h3>
-        <h3>saboroso e saudável! O doce são das frutas! Não tem adição de</h3>
-        <h3>açucar artificial! Não é incrível?!</h3>
+        <h3>O preparo deste sorvete é extremamente fácil, além de ser natural,saboroso e saudável!</h3>
+        <h3>O doce são das frutas! Não tem adição de acúcar artificial!</h3>
+        <h3>Não é incrível?!</h3>
     </section>
 
         <h3>Vamos preparar esta delícia?!</h3>
